--- a/src/main/resources/mails/templates/billing-closure.html
+++ b/src/main/resources/mails/templates/billing-closure.html
@@ -194,7 +194,7 @@
                                                                     compte client n°<span th:text="${tiers.id}">.</span>
                                                                 </p>
                                                                 <p>Vous disposez de plusieurs moyens de règlement :</p>
-                                                                <p>➡️ <strong>Virement : </br>IBAN /
+                                                                <p>➡️ <strong>Virement : <br />IBAN /
                                                                         BIC : <span th:text="${ibanJss}"></span> / <span
                                                                             th:text="${bicJss}"></span></p>
                                                                 <p>➡️ <strong>Carte bancaire</strong> en utilisant les
@@ -235,8 +235,8 @@
                                                             <td
                                                                 style="padding-left:10px;padding-right:10px;width:100%;">
                                                                 <p><span style="font-size: 18px;">Service
-                                                                        comptabilité</span></br>
-                                                                    01 47 03 10 10</br>
+                                                                        comptabilité</span><br />
+                                                                    01 47 03 10 10<br />
                                                                     <a href="" style="text-decoration:underline">
                                                                         <span
                                                                             style="color:rgb(35, 61, 86);; text-decoration:none">compta@jss.fr</span>
