--- a/src/main/resources/mails/templates/customer-order-finalization.html
+++ b/src/main/resources/mails/templates/customer-order-finalization.html
@@ -193,7 +193,7 @@
                                                                 style="padding-left:10px;padding-right:10px;width:100%;">
                                                                 <p>Bonjour <span th:text="${customerName}"></span>,</p>
                                                                 <p>Nous avons le plaisir de vous informer de la
-                                                                    finalisation de votre commande.</br>
+                                                                    finalisation de votre commande.<br />
                                                                     La facture n°<span th:text="${invoice.id}"></span>
                                                                     est en PJ.</p>
                                                                 <p>Vous disposez de plusieurs moyens de règlement pour
@@ -201,7 +201,7 @@
                                                                 <p>➡️ <strong>Virement</strong> en indiquant cette
                                                                     référence dans le
                                                                     libellé : <span
-                                                                        th:text="${invoice.id}"></span></br>IBAN /
+                                                                        th:text="${invoice.id}"></span><br />IBAN /
                                                                     BIC : <span th:text="${ibanJss}"></span> / <span
                                                                         th:text="${bicJss}"></span></p>
                                                                 <p>➡️ <strong>Carte bancaire</strong> en flashant le QR
@@ -244,8 +244,8 @@
                                                             <td
                                                                 style="padding-left:10px;padding-right:10px;width:100%;">
                                                                 <p><span style="font-size: 18px;">Service
-                                                                        comptabilité</span></br>
-                                                                    01 47 03 10 10</br>
+                                                                        comptabilité</span><br />
+                                                                    01 47 03 10 10<br />
                                                                     <a href="" style="text-decoration:underline">
                                                                         <span
                                                                             style="color:rgb(35, 61, 86);; text-decoration:none">compta@jss.fr</span>
