--- a/src/main/resources/mails/templates/invoice-reminder.html
+++ b/src/main/resources/mails/templates/invoice-reminder.html
@@ -195,7 +195,7 @@
                                                                 <p>Nous vous adressons une nouvelle fois la facture de
                                                                     votre commande n°<span
                                                                         th:text="${customerOrder.id}"></span> à
-                                                                    télécharger en PJ. </br>
+                                                                    télécharger en PJ. <br />
                                                                 <p th:if="${isLastReminder}"><span>Sans réglement de
                                                                         votre part dans les 10 jours, nous nous verrons
                                                                         contraints de vous mettre en demeure pour la
@@ -207,7 +207,7 @@
                                                                 <p>➡️ <strong>Virement</strong> en indiquant cette
                                                                     référence dans le
                                                                     libellé : <span
-                                                                        th:text="${invoice.id}"></span></br>IBAN /
+                                                                        th:text="${invoice.id}"></span><br />IBAN /
                                                                     BIC : <span th:text="${ibanJss}"></span> / <span
                                                                         th:text="${bicJss}"></span></p>
                                                                 <p>➡️ <strong>Carte bancaire</strong> en flashant le QR
@@ -249,8 +249,8 @@
                                                             <td
                                                                 style="padding-left:10px;padding-right:10px;width:100%;">
                                                                 <p><span style="font-size: 18px;">Service
-                                                                        comptabilité</span></br>
-                                                                    01 47 03 10 10</br>
+                                                                        comptabilité</span><br />
+                                                                    01 47 03 10 10<br />
                                                                     <a href="" style="text-decoration:underline">
                                                                         <span
                                                                             style="color:rgb(35, 61, 86);; text-decoration:none">compta@jss.fr</span>
