--- a/src/main/resources/mails/templates/mail-template.html
+++ b/src/main/resources/mails/templates/mail-template.html
@@ -194,7 +194,7 @@
                                                                 <p>Bonjour <span th:text="${customerName}"></span>,</p>
                                                                 <p>Nous vous confirmons la prise en compte de votre
                                                                     commande dont le traitement débutera dès réception
-                                                                    de votre acompte d'un montant de [PRIX].</br>Le
+                                                                    de votre acompte d'un montant de [PRIX].<br />Le
                                                                     montant de cet acompte sera déduit de la facture
                                                                     finale qui vous sera transmise par mail
                                                                     ultérieurement.</p>
@@ -227,10 +227,10 @@
                                                                 <p><span style="font-size: 18px;"><span
                                                                             th:text="${replyToEmployee.firstname}"></span>
                                                                         <span
-                                                                            th:text="${replyToEmployee.lastname}"></span></span></br>
+                                                                            th:text="${replyToEmployee.lastname}"></span></span><br />
                                                                     <span
-                                                                        th:text="${replyToEmployee.title}"></span></br>
-                                                                    01 47 03 10 10</br>
+                                                                        th:text="${replyToEmployee.title}"></span><br />
+                                                                    01 47 03 10 10<br />
                                                                     <a href="" style="text-decoration:underline">
                                                                         <span
                                                                             style="color:rgb(35, 61, 86);; text-decoration:none"><span
