--- a/client/src/app/modules/dashboard/components/dashboard/dashboard.component.html
+++ b/client/src/app/modules/dashboard/components/dashboard/dashboard.component.html
@@ -36,6 +36,9 @@
           [affaireSearch]="affaireSearchWaitingDocument" [isForDashboard]="true"></provision-list>
         <provision-list class="dashboard-box-component" *ngIf="item==AFFAIRE_RESPONSIBLE_IN_PROGRESS"
           [affaireSearch]="affaireSearchResponsibleInProgress" [isForDashboard]="true"></provision-list>
+        <provision-list class="dashboard-box-component"
+          *ngIf="item==AFFAIRE_MISSING_ATTACHMENT_QUERY_TO_MANUALLY_REMINDER"
+          [affaireSearch]="affaireSearchMissingAttachmentQueryManually" [isForDashboard]="true"></provision-list>
         <ordering-list class="dashboard-box-component" *ngIf="item==ORDER_OPEN" [orderingSearch]="orderingSearchOpen"
           [isForDashboard]="true"></ordering-list>
         <ordering-list class="dashboard-box-component" *ngIf="item==ALL_ORDER_OPEN"
