--- a/client/src/app/modules/invoicing/components/invoice-details/invoice-details.component.html
+++ b/client/src/app/modules/invoicing/components/invoice-details/invoice-details.component.html
@@ -190,7 +190,7 @@
               <ng-container *ngFor="let provision of service.provisions">
                 <tr class="mat-mdc-row mdc-data-table__row ">
                   <td class="mat-mdc-cell mdc-data-table__cell  affaire affaire-align" colspan="2">
-                    {{getServiceLabel(service,false)}}
+                    {{getServiceLabel(service)}}
                   </td>
                 </tr>
                 <tr class="mat-mdc-row mdc-data-table__row " *ngIf="provision.provisionType">
