--- a/client/src/app/modules/quotation/components/select-attachment-type-dialog/missing-attachment-mail-dialog.component.html
+++ b/client/src/app/modules/quotation/components/select-attachment-type-dialog/missing-attachment-mail-dialog.component.html
@@ -1,8 +1,8 @@
-<h1 *ngIf="service" mat-dialog-title>Demande des pièces manquantes - {{service.customLabel?service.customLabel:
-  service.serviceType.label}}</h1>
-<div mat-dialog-content *ngIf="service && service.assoServiceDocuments && service.assoServiceDocuments.length>0">
-  <p>Choisissez ci-dessous la liste des pièces jointes à envoyer :</p>
-  <table class="full-width">
+<h1 *ngIf="service" mat-dialog-title>Demande des pièces manquantes - {{getServiceLabel(service)}}</h1>
+<div mat-dialog-content
+  *ngIf="service && service.assoServiceDocuments && service.assoServiceDocuments.length>0 || selectedAssoServiceDocument">
+  <p *ngIf="editMode">Choisissez ci-dessous la liste des pièces jointes à envoyer :</p>
+  <table class="full-width" *ngIf="editMode">
     <tr>
       <td>
         <sort-table class="margin-bottom" (onRowClick)="selectAssoServiceDocument($event)" [columns]="displayedColumns"
@@ -23,10 +23,10 @@
         <td colspan="3">
           <generic-textarea [(model)]="assoServiceDocument.formalisteComment" label="Commentaire du formaliste"
             [form]="attachmentTypeForm" [propertyName]="'formalisteComment'+index" [isMandatory]="false"
-            [isDisabled]="false" [numberOfLines]="3"></generic-textarea>
+            [isDisabled]="!editMode" [numberOfLines]="3"></generic-textarea>
         </td>
         <td style="width: 80px;">
-          <button mat-raised-button color="accent" (click)="deleteAssoServiceDocument(index)"
+          <button mat-raised-button color="accent" (click)="deleteAssoServiceDocument(index)" *ngIf="editMode"
             matTooltip="Supprimer de la sélection"><mat-icon style="margin : 0" class="pointer">
               delete</mat-icon></button>
         </td>
@@ -36,7 +36,7 @@
   <table class="full-width">
     <tr>
       <td colspan="2"><generic-textarea [(model)]="missingAttachmentQuery.comment" label="Commentaire global"
-          [form]="attachmentTypeForm" propertyName="comment" [isMandatory]="false" [isDisabled]="false"
+          [form]="attachmentTypeForm" propertyName="comment" [isMandatory]="false" [isDisabled]="!editMode"
           [numberOfLines]="3"></generic-textarea>
       </td>
     </tr>
@@ -50,13 +50,12 @@
   <p *ngIf="missingAttachmentQuery.createdDateTime">Dernier envoi le {{missingAttachmentQuery.createdDateTime|
     date:'dd/MM/yyyy HH:mm'}}</p>
 </div>
-<div mat-dialog-content *ngIf="!service || !service.assoServiceDocuments || service.assoServiceDocuments.length==0">
+<div mat-dialog-content
+  *ngIf="(!service || !service.assoServiceDocuments || service.assoServiceDocuments.length==0) && !selectedAssoServiceDocument">
   <p>Aucun type de document attendu sur ce service</p>
 </div>
 <div mat-dialog-actions align="end">
-  <button mat-raised-button color="accent" (click)="closeDialog()">Annuler</button>
-  <button mat-raised-button color="warn" *ngIf="missingAttachmentQuery.createdDateTime"
-    (click)="generateMail()">Relancer</button>
-  <button mat-raised-button color="warn" *ngIf="!missingAttachmentQuery.createdDateTime"
-    (click)="generateMail()">Valider</button>
+  <button mat-raised-button color="accent" (click)="closeDialog()" *ngIf="editMode">Annuler</button>
+  <button mat-raised-button color="accent" (click)="closeDialog()" *ngIf="!editMode">Fermer</button>
+  <button mat-raised-button color="warn" *ngIf=" editMode" (click)="generateMail()">Valider</button>
 </div>
