--- a/src/main/resources/mails/templates/customer-order-in-progress.html
+++ b/src/main/resources/mails/templates/customer-order-in-progress.html
@@ -202,7 +202,8 @@
                                                                     (<span
                                                                         style="color:rgb(35, 61, 86);; text-decoration:none"><span
                                                                             th:text="${customerOrder.assoAffaireOrders[0].assignedTo.mail}"></span></span>)
-                                                                    et toute son équipe.</p>
+                                                                    et toute son équipe.
+                                                                </p>
                                                                 <p>Sauf avis contraire et immédiat de votre part, la
                                                                     facture sera établie au nom de <span
                                                                         th:text="${invoiceLabelResult.billingLabel}"></span>
@@ -252,10 +253,10 @@
                                                                 <p><span style="font-size: 18px;"><span
                                                                             th:text="${replyToEmployee.firstname}"></span>
                                                                         <span
-                                                                            th:text="${replyToEmployee.lastname}"></span></span></br>
+                                                                            th:text="${replyToEmployee.lastname}"></span></span><br />
                                                                     <span
-                                                                        th:text="${replyToEmployee.title}"></span></br>
-                                                                    01 47 03 10 10</br>
+                                                                        th:text="${replyToEmployee.title}"></span><br />
+                                                                    01 47 03 10 10<br />
                                                                     <a href="" style="text-decoration:underline">
                                                                         <span
                                                                             style="color:rgb(35, 61, 86);; text-decoration:none"><span
