--- a/src/main/resources/mails/templates/request-rib.html
+++ b/src/main/resources/mails/templates/request-rib.html
@@ -234,10 +234,10 @@
                                                                 <p><span style="font-size: 18px;"><span
                                                                             th:text="${replyToEmployee.firstname}"></span>
                                                                         <span
-                                                                            th:text="${replyToEmployee.lastname}"></span></span></br>
+                                                                            th:text="${replyToEmployee.lastname}"></span></span><br />
                                                                     <span
-                                                                        th:text="${replyToEmployee.title}"></span></br>
-                                                                    01 47 03 10 10</br>
+                                                                        th:text="${replyToEmployee.title}"></span><br />
+                                                                    01 47 03 10 10<br />
                                                                     <a href="" style="text-decoration:underline">
                                                                         <span
                                                                             style="color:rgb(35, 61, 86);; text-decoration:none"><span
