--- a/src/main/resources/mails/templates/waiting-quotation-validation.html
+++ b/src/main/resources/mails/templates/waiting-quotation-validation.html
@@ -194,9 +194,9 @@
                                                                 <p>Bonjour <span th:text="${customerName}"></span>,</p>
                                                                 <p>
                                                                     Pour donner suite à votre demande, veuillez trouver
-                                                                    ci-dessous votre devis.</br>
+                                                                    ci-dessous votre devis.<br />
                                                                     Pour le valider ou nous faire part de vos remarques,
-                                                                    répondez simplement à ce mail.</br>
+                                                                    répondez simplement à ce mail.<br />
                                                                     Dès réception de votre validation ou du paiement de
                                                                     son montant, la commande sera automatiquement
                                                                     ouverte.</p>
@@ -387,7 +387,7 @@
                                                                 <p>➡️ <strong>Virement</strong> en indiquant cette
                                                                     référence dans le
                                                                     libellé : <span
-                                                                        th:text="${quotation.id}"></span></br>IBAN /
+                                                                        th:text="${quotation.id}"></span><br />IBAN /
                                                                     BIC : <span th:text="${ibanJss}"></span> / <span
                                                                         th:text="${bicJss}"></span></p>
                                                                 <p>➡️ <strong>Carte bancaire</strong> en flashant le QR
@@ -436,10 +436,10 @@
                                                                 <p><span style="font-size: 18px;"><span
                                                                             th:text="${replyToEmployee.firstname}"></span>
                                                                         <span
-                                                                            th:text="${replyToEmployee.lastname}"></span></span></br>
+                                                                            th:text="${replyToEmployee.lastname}"></span></span><br />
                                                                     <span
-                                                                        th:text="${replyToEmployee.title}"></span></br>
-                                                                    01 47 03 10 10</br>
+                                                                        th:text="${replyToEmployee.title}"></span><br />
+                                                                    01 47 03 10 10<br />
                                                                     <a href="" style="text-decoration:underline">
                                                                         <span
                                                                             style="color:rgb(35, 61, 86);; text-decoration:none"><span
