--- a/client/src/app/modules/accounting/components/accounting/accounting.component.html
+++ b/client/src/app/modules/accounting/components/accounting/accounting.component.html
@@ -16,11 +16,11 @@
         <accounting-balance-generale></accounting-balance-generale>
       </ng-template>
     </mat-tab>
-    <mat-tab label="Bilan" *ngIf="canDisplayBilan()">
+    <!--mat-tab label="Bilan" *ngIf="canDisplayBilan()">
       <accounting-bilan></accounting-bilan>
     </mat-tab>
     <mat-tab label="Compte de résultats" *ngIf="canDisplayProfitLost()">
       <app-accounting-profit-lost></app-accounting-profit-lost>
-    </mat-tab>
+    </mat-tab-->
   </mat-tab-group>
 </div>
