--- a/src/main/resources/mails/templates/billing-closure-receipt.html
+++ b/src/main/resources/mails/templates/billing-closure-receipt.html
@@ -73,7 +73,8 @@
         <thead>
             <tr>
                 <td style="text-align: center;" class="border-table">Date</td>
-                <td style="text-align: center;" class="border-table">Description</td>
+                <td class="border-table" style="text-align: center;border-right: solid;border-color: rgb(0,83,159)">
+                    Description</td>
                 <td class="border-table" style="border-right: solid;border-color: rgb(0,83,159)">Débit</td>
                 <td class="border-table">Crédit</td>
             </tr>
@@ -83,13 +84,15 @@
                 th:classappend="${values.displayBottomBorder} ? border-table : none-class"><span
                     th:text="${values.eventDateString}"></span></td>
             <td th:classappend="${values.displayBottomBorder} ? border-table : none-class"
-                th:if="${values.eventDescription!=null} and ${values.eventDateString!=null}">
+                th:if="${values.eventDescription!=null} and ${values.eventDateString!=null}"
+                style="border-right: solid;border-color: rgb(0,83,159)">
                 <span th:utext="${values.eventDescription}"></span> <span th:if="${values.eventCbLink!=null}"> (payer <a
                         th:href="${values.eventCbLink}">ici</a>)</span>
             </td>
             <td th:classappend="${values.displayBottomBorder} ? border-table : none-class"
                 th:if="${values.eventDescription!=null} and ${values.eventDateString==null}"
-                style="padding-top: 20px;padding-bottom: 20px;padding-left: 10px;" colspan="2">
+                style="padding-top: 20px;padding-bottom: 20px;padding-left: 10px;border-right: solid;border-color: rgb(0,83,159)"
+                colspan="2">
                 <strong><span th:utext="${values.eventDescription}"></span></strong>
             </td>
             <td th:classappend="${values.displayBottomBorder} ? border-table : none-class" class="td-with-price  "
@@ -109,41 +112,47 @@
         style="border : solid; border-color: rgb(0,83,159);width: 680px;margin-top: 20px;border-collapse: collapse;break-inside: avoid;">
         <tr>
             <td class="td-date "></td>
-            <td style="text-align: right;padding-right: 10px;">
+            <td style="text-align: right;padding-right: 10px;border-right: solid; border-color: rgb(0,83,159);">
                 Débit
             </td>
-            <td class="td-with-price" style="text-align: right;white-space: nowrap;" colspan="2"><span
-                    th:text="${#numbers.formatDecimal(debitBalance,1,2)}"></span> €
+            <td class="td-with-price"
+                style="text-align: right;white-space: nowrap;border-right: solid; border-color: rgb(0,83,159);"
+                colspan="2">
+                <span th:text="${#numbers.formatDecimal(debitBalance,1,2)}"></span> €
             </td>
             <td class="td-with-price"></td>
         </tr>
         <tr>
             <td class="td-date"></td>
-            <td style="text-align: right;;padding-right: 10px;">
+            <td style="text-align: right;;padding-right: 10px;border-right: solid; border-color: rgb(0,83,159);">
                 Crédit
             </td>
-            <td class="td-with-price"></td>
-            <td class="td-with-price" style="text-align: right;white-space: nowrap;" colspan="2"><span
-                    th:text="${#numbers.formatDecimal(creditBalance,1,2)}"></span> €
+            <td class="td-with-price" style="border-right: solid; border-bottom: solid;border-color: rgb(0,83,159);">
+            </td>
+            <td class="td-with-price"
+                style="text-align: right;white-space: nowrap;border-bottom: solid;border-color: rgb(0,83,159);"
+                colspan="2"><span th:text="${#numbers.formatDecimal(creditBalance,1,2)}"></span> €
             </td>
         </tr>
         <tr th:if="${balance>=0}">
             <td class="td-date "></td>
-            <td style="text-align: right;;padding-right: 10px;">
+            <td style="text-align: right;;padding-right: 10px;border-right: solid; border-color: rgb(0,83,159);">
                 Solde
             </td>
-            <td class="td-with-price"></td>
+            <td class="td-with-price" style="border-right: solid; border-color: rgb(0,83,159);"></td>
             <td class="td-with-price" style="text-align: right;white-space: nowrap;" colspan="2"><span
                     th:text="${#numbers.formatDecimal(balance,1,2)}"></span> €
             </td>
         </tr>
         <tr th:if="${0>balance}">
             <td class="td-date "></td>
-            <td style="text-align: right;;padding-right: 10px;">
+            <td style="text-align: right;;padding-right: 10px;border-right: solid; border-color: rgb(0,83,159);">
                 Solde
             </td>
-            <td class="td-with-price" style="text-align: right;white-space: nowrap;" colspan="2"><span
-                    th:text="${#numbers.formatDecimal(-balance,1,2)}"></span> €
+            <td class="td-with-price"
+                style="text-align: right;white-space: nowrap;border-right: solid; border-color: rgb(0,83,159);"
+                colspan="2">
+                <span th:text="${#numbers.formatDecimal(-balance,1,2)}"></span> €
             </td>
             <td class="td-with-price"></td>
         </tr>
